unpackaged/config/qa/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Test_Text_Field__c</fullName>
        <label>Test Text Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Checkbox_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Test Checkbox Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Lookup_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Lookup Field</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Test Contact Lookups</relationshipLabel>
        <relationshipName>Test_Contact_Lookup_Opp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Long_Text_Area__c</fullName>
        <label>Test Long Text Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Picklist__c</fullName>
        <label>Test Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test Value 1</fullName>
                </value>
                <value>
                    <fullName>Test Value 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Date_Field__c</fullName>
        <label>Test Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Number_Field__c</fullName>
        <label>Test Number Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Rich_Text__c</fullName>
        <label>Test Rich Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Phone_Field__c</fullName>
        <label>Test Phone Field</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Test_Percent_Field__c</fullName>
        <precision>18</precision>
        <scale>0</scale>
        <label>Test Percent Field</label>
        <type>Percent</type>
    </fields>
</CustomObject>